# cac-core

./: CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: create_artifacts_and_publish.yaml  pytest.yaml
cac_core/: __init__.py  cli.py  command.py  config.py  credentialmanager.py  logger.py  model.py  output.py  updatechecker.py
junit/: test-results.xml
tests/: __init__.py  conftest.py  test_config.py  test_output.py
tests/test_cli/: test_cli.py  test_run.py
tests/test_command/: test_command.py  test_run.py
tests/test_config/: atest_config.py  test_config.py  test_config_extra.py  test_ensure_keys.py
tests/test_credentialmanager/: test_credentialmanager.py
tests/test_logger/: atest_logger.py  test_logger.py
tests/test_model/: test_model.py
tests/test_output/: test_output.py
tests/test_updatechecker/: test_updatechecker.py
