[tool.poetry]
name = "cac-core"
version = "0.2.0"
description = ""
authors = ["Ryan Punt <ryan@mirum.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
logger = "^1.4"
tabulate = "^0.9.0"
requests = "^2.32.3"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
