[project]
name = "cac-core"
version = "0.5.1"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<4.0"
authors = [
    {name = "Ryan Punt", email = "ryan@mirum.org"}
]
dependencies = [
    "logger>=1.4",
    "tabulate>=0.9.0",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "keyring>=25.6.0"
]
keywords = ["api", "framework", "cli", "command-lint", "python", "cli-tool"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://mirum.org/cac-core/"
repository = "https://github.com/rpunt/cac-core"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
test = [
    "pytest>=8.3.5",
]
lint = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cac_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
